<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#131313"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="261dp"
        android:layout_height="32dp"
        android:layout_marginTop="104dp"
        android:lineSpacingExtra="10sp"
        android:text="@string/text_choix"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/screenBackground"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_pokeInfo"
        android:layout_width="282dp"
        android:layout_height="71dp"
        android:text="@string/poke_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_second"
        app:layout_constraintVertical_bias="0.559" />

    <Button
        android:id="@+id/button_pokeTri"
        android:layout_width="282dp"
        android:layout_height="76dp"
        android:layout_marginBottom="96dp"
        android:text="@string/poke_tri"
        app:layout_constraintBottom_toTopOf="@+id/button_pokeInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>